# myGoogleTestProj

./: CMakeLists.txt  README.md  testA.cpp  testB.cpp  testC.cpp
